// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Error default correctly 1`] = `
<article
  className="container"
>
  <div
    className="wrapper"
  >
    <h3
      className="title"
    >
      An error occurred during rendering the chart
    </h3>
    <div>
      <div
        className="fetch"
      >
        <svg
          fill="#58666e"
          height="7em"
          width="7em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="#505050"
            strokeWidth="4"
          >
            <path
              d="M26.043 27.063S15.916 8.44 7.151 9.38c-4.616.495-5.442 5.373-4.33 8.985 1.153 3.748 6.407 10.243 15.77 9.497l7.452-.8"
            />
            <path
              d="M26.55 27.341S8.88 15.63 10.58 6.98c.896-4.555 5.828-4.953 9.33-3.53 3.632 1.475 9.644 7.275 8.085 16.537l-1.447 7.354zm.018 6.42s.444 5.972 4.188 6.824c0 0-1.618 6.516-9.049 9.02-10.911 3.678-14.226-.768-14.738-3.56-1.215-6.623 6.375-11.92 10.724-12.661 6.434-1.096 8.875.376 8.875.376zM38.35 37.68c-3.573 0-6.47-3.106-6.47-6.936 0-3.831 2.897-6.936 6.47-6.936 3.574 0 6.471 3.105 6.471 6.936 0 3.83-2.897 6.936-6.47 6.936z"
              fill="#FFC900"
            />
            <path
              d="m27.66 43.814 7.145 3.992 1.775 6.511M21.435 48.717l5.695 5.689-.327 6.597M14.568 51.07l1.052 7.527-4.561 4.851"
            />
          </g>
        </svg>
        <div
          className="fetchTitle"
        >
          error message
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`renders Error default correctly 2`] = `
<article
  className="container"
>
  <div
    className="wrapper"
  >
    <h3
      className="title"
    >
      No results
    </h3>
    <div>
      <div
        className="fetch"
      >
        <svg
          fill="#58666e"
          height="7em"
          width="7em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="#505050"
            strokeWidth="4"
          >
            <path
              d="M26.043 27.063S15.916 8.44 7.151 9.38c-4.616.495-5.442 5.373-4.33 8.985 1.153 3.748 6.407 10.243 15.77 9.497l7.452-.8"
            />
            <path
              d="M26.55 27.341S8.88 15.63 10.58 6.98c.896-4.555 5.828-4.953 9.33-3.53 3.632 1.475 9.644 7.275 8.085 16.537l-1.447 7.354zm.018 6.42s.444 5.972 4.188 6.824c0 0-1.618 6.516-9.049 9.02-10.911 3.678-14.226-.768-14.738-3.56-1.215-6.623 6.375-11.92 10.724-12.661 6.434-1.096 8.875.376 8.875.376zM38.35 37.68c-3.573 0-6.47-3.106-6.47-6.936 0-3.831 2.897-6.936 6.47-6.936 3.574 0 6.471 3.105 6.471 6.936 0 3.83-2.897 6.936-6.47 6.936z"
              fill="#FFC900"
            />
            <path
              d="m27.66 43.814 7.145 3.992 1.775 6.511M21.435 48.717l5.695 5.689-.327 6.597M14.568 51.07l1.052 7.527-4.561 4.851"
            />
          </g>
        </svg>
        <div
          className="fetchTitle"
        >
          error message
        </div>
      </div>
    </div>
  </div>
</article>
`;
